<resources>
    <string name="app_name">Быстрый курьер</string>

    <string name="title_activity_orders_list">Список заказов</string>
    <string name="orders">Заказы</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_order">Заказ</string>

    <string name="login">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="authorization">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="exit">Выйти</string>
    <string name="update">Обновить</string>
    <string name="open_map">Открыть карту</string>
    <string name="call">Позвонить</string>

    <string name="receiving_data">Получение данных</string>
    <string name="next_status">Сменить статус</string>
    <string name="delivered">Доставлено</string>
    <string name="map_Tab_Tag">MapTab</string>
    <string name="map_Tab_Indicator">Карта</string>
    <string name="api_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyA47khbHdWAsyHB3ySRRxDT8pMhTrSlaEQ
    </string>
    <string name="order_address">Адрес заказа</string>
    <string name="online_payment">Оплата онлайн</string>
    <string name="order_phone">Телефон</string>
    <string name="order_note">Примечание</string>
    <string name="order_delivered">Заказ проставлен в статус \"Доставлен\"</string>
    <string name="order_not_delivered">Заказ не проставлен в статус "Доставлен"</string>
    <string name="timer_error">Ошибка в работе таймера</string>
    <string name="timer_progress">Таймер работает</string>
    <string name="timer_end">Таймер завершен</string>
    <string name="update_error">Ошибка при получении данных</string>
    <string name="update_data">Данные получены</string>
    <string name="update_no_data">Нет заказов</string>
    <string name="auth_error">Авторизация не пройдена\nошибка подключения</string>
    <string name="auth_login">Авторизация выполнена</string>
    <string name="auth_no_login">Авторизация не пройдена\nнеправильный логин или пароль</string>
    <string name="no_internet">Нет подключения к интернету</string>
    <string name="choose_city">выберите город</string>
    <string name="fill_in_all_fields">Заполните все поля</string>

    <string name="adb_title">Подтверждение доставки</string>
    <string name="adb_msg">Вы уверены, что хотите это сделать?</string>
    <string name="adb_yes">Да, уверен!</string>
    <string name="adb_no">Нет, мне страшно..</string>

    <string name="show_me">Show me</string>
    <string name="recenter_map">Recenter map</string>
    <string name="geo_data_unavailable">Geo data unavailable</string>

    <string name="permission_cancelled_msg_gps">Geo-location has been disabled for this app. We can\'t show your position on the map.</string>
    <string name="permission_explanation_gps">Application requires access to your location in order to show you on map and help you navigate around event\'s area.</string>
    <string name="permission_needed">Permission needed</string>
    <string name="yandexmaps_uri_formatter" formatted="false">yandexmaps://maps.yandex.ru/?pt=%f,%f&amp;z=%d&amp;=map</string>
    <string name="change_order_status">Изменить статус заказа</string>
    <string name="who_you_gonna_call">Кому вы хотите позвонить?</string>
    <string name="cancel">Отмена</string>
    <string name="confirm">Подтвердить</string>
    <string name="call_center">Колл-центр</string>
    <string name="client">Клиент</string>
    <string name="camera">Камера</string>
    <string name="payed_online">этот заказ был оплачен онлайн, для подтверждения статуса «доставлен» необходима фотография чека.</string>
    <string name="check_photo_required">потребуется фото чека</string>
    <string name="check_sum">сумма чека</string>
    <string name="check_sum_incorrect">Ошибка в сумме чека</string>
    <string name="wait_for_server_response">Ожидайте ответа сервера</string>
    <!--yandexmaps://maps.yandex.ru/?pt=37.673098,55.757134&z=12&l=map-->
</resources>
