<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.burningcourier.ui.fragments.AuthenticationFragment">

    <TextView
        android:id="@+id/logo_name"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textColor="@color/auth_logo"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_name"
        android:background="@color/auth"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/authorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="#ffffff"
            android:hint="@string/login"
            android:inputType="phone"
            android:textSize="15sp">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/password"
            android:text="1111"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="#ffffff"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textSize="15sp"/>

        <Button
            android:text="@string/auth_Button"
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/auth_btn_text"/>
    </LinearLayout>
</RelativeLayout>

