<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="320dp"
    android:background="@color/colorWhite">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/confirmation_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/titleIcon"
            tools:src="@drawable/approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>


    <TextView
        android:id="@+id/title"
        tools:text="@string/change_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/colorGray58"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/orderNumber"
        tools:text="950-012000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/colorGray58"
        android:textSize="24sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/subTitle"
        android:text="@string/payed_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/colorGray58"
        android:textSize="16sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/firstButton"
            tools:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/secondButton"
            tools:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>

    <Button
        android:id="@+id/thirdButton"
        tools:text="photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>